# omniz

./: .gitignore  CMakeLists.txt  README.md  todo_sigmadev.md
SigmaDev/: CMakeLists.txt
SigmaDev/include/SigmaDev/Application/: Application.h  ApplicationInitialization.h  ApplicationRelease.h  ApplicationTick.h  DefaultApplication.h
SigmaDev/include/SigmaDev/Audio/: MusicPlayer.h  SoundAccesser.h  SoundPlayer.h
SigmaDev/include/SigmaDev/Configuration/: JsonAccesser.h  JsonParser.h  JsonSaver.h
SigmaDev/include/SigmaDev/Exception/: Exception.h  GUIExceptions.h  ResourcesExceptions.h  TestingExceptions.h  WindowsExceptions.h
SigmaDev/include/SigmaDev/GUI/: GUIEvents.h  GUIExecutive.h  GUIObject.h  GUIObjectDefaultGenerators.h  GUIScrollArea.h
SigmaDev/include/SigmaDev/Graphics/: ComplexDrawable.h  ExpandableSprite.h  GraphicsAccesser.h  GraphicsDefines.h  GraphicsRenderer.h  SigmaDevDefaultTextures.h
SigmaDev/include/SigmaDev/Json/: JsonLoader.h
SigmaDev/include/SigmaDev/Main/: Main.h
impl/: CMakeLists.txt
impl/include/: OZ_Application.h  OZ_Class.h  OZ_Commons.h  OZ_Core.h  OZ_CoreData.h  OZ_CoreImpls.h  OZ_CoreResult.h  OZ_Result.h  OZ_Testing.h  OZ_Tmp_Movement_Test.h  Other_LuaTesting.h
impl/src/: OZ_Application.cpp  OZ_Class.cpp  OZ_Commons.cpp  OZ_Core.cpp  OZ_CoreData.cpp  OZ_CoreImpls.cpp  OZ_CoreResult.cpp  OZ_Result.cpp  OZ_Testing.cpp  OZ_Tmp_Movement_Test.cpp  Other_LuaTesting.cpp  main.cpp
include/sol/: config.hpp  forward.hpp  sol.hpp
statistics/en/July_02_2021/: changes.md  execution_results.md  sigmadev_changes.html
(+59 files in other folders)
